--- a/app/src/main/res/layout/question_detail.xml
+++ b/app/src/main/res/layout/question_detail.xml
@@ -1,92 +1,219 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#28282b"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="#28282b">
 
     <TextView
         android:id="@+id/item_question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textSize="30sp"
-        android:textColor="#f5f5f5"
-        android:text="@string/question"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:textStyle="bold"/>
+        android:text="@string/question"
+        android:textColor="#f5f5f5"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/item_question_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/item_question"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:textSize="25sp"
-        android:textColor="#f5f5f5"
+        android:layout_marginStart="5dp"
         android:text="@string/question_description"
-        android:layout_marginStart="5dp"/>
+        android:textColor="#f5f5f5"
+        android:textSize="25sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_question" />
 
     <TextView
         android:id="@+id/tag1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="hello"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_question_desc"
-        android:textColor="#f5f5f5"
-        android:background="@drawable/rounded_corner"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="30dp"
+        android:background="@drawable/rounded_corner"
+        android:padding="10dp"
+        android:text="hello"
         android:textAlignment="center"
-        android:padding="10dp"/>
+        android:textColor="#f5f5f5"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_question_desc" />
 
     <TextView
         android:id="@+id/tag2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="hello"
-        app:layout_constraintLeft_toRightOf="@id/tag1"
-        app:layout_constraintTop_toBottomOf="@id/item_question_desc"
-        android:textColor="#f5f5f5"
-        android:background="@drawable/rounded_corner"
-        android:layout_marginTop="30dp"
-        android:textAlignment="center"
         android:layout_marginStart="10dp"
-        android:padding="10dp"/>
+        android:layout_marginTop="30dp"
+        android:background="@drawable/rounded_corner"
+        android:padding="10dp"
+        android:text="hello"
+        android:textAlignment="center"
+        android:textColor="#f5f5f5"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toRightOf="@id/tag1"
+        app:layout_constraintTop_toBottomOf="@id/item_question_desc" />
 
     <TextView
         android:id="@+id/tag3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="hello"
-        app:layout_constraintLeft_toRightOf="@id/tag2"
-        app:layout_constraintTop_toBottomOf="@id/item_question_desc"
-        android:textColor="#f5f5f5"
-        android:background="@drawable/rounded_corner"
-        android:layout_marginTop="30dp"
-        android:textAlignment="center"
         android:layout_marginStart="10dp"
-        android:padding="10dp"/>
+        android:layout_marginTop="30dp"
+        android:background="@drawable/rounded_corner"
+        android:padding="10dp"
+        android:text="hello"
+        android:textAlignment="center"
+        android:textColor="#f5f5f5"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toRightOf="@id/tag2"
+        app:layout_constraintTop_toBottomOf="@id/item_question_desc" />
 
     <TextView
         android:id="@+id/tag4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="hello"
-        app:layout_constraintLeft_toRightOf="@id/tag3"
-        app:layout_constraintTop_toBottomOf="@id/item_question_desc"
-        android:textColor="#f5f5f5"
-        android:background="@drawable/rounded_corner"
-        android:layout_marginTop="30dp"
-        android:textAlignment="center"
         android:layout_marginStart="10dp"
-        android:padding="10dp"/>
+        android:layout_marginTop="30dp"
+        android:background="@drawable/rounded_corner"
+        android:padding="10dp"
+        android:text="hello"
+        android:textAlignment="center"
+        android:textColor="#f5f5f5"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toRightOf="@id/tag3"
+        app:layout_constraintTop_toBottomOf="@id/item_question_desc" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/item_image"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="55dp"
+        app:cardCornerRadius="60dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tag1">
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/profile_pic"
+            android:scaleType="centerCrop" />
+
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/item_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="55dp"
+        android:text="@string/name"
+        android:textColor="#f5f5f5"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toRightOf="@id/item_image"
+        app:layout_constraintTop_toBottomOf="@id/tag1" />
+
+    <TextView
+        android:id="@+id/item_votes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:text="@string/no_of_followers"
+        android:textColor="#f5f5f5"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toRightOf="@id/item_image"
+        app:layout_constraintTop_toBottomOf="@id/item_name" />
+
+    <TextView
+        android:id="@+id/item_last_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:text="last edited by \nAbhishek"
+        android:textColor="#f5f5f5"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/item_name" />
+
+    <ImageView
+        android:id="@+id/item_upvote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/upvote_icon"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@id/guideline2"
+        app:layout_constraintTop_toBottomOf="@id/item_image" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@id/item_upvote"
+        app:layout_constraintRight_toRightOf="@id/item_upvote"
+        app:layout_constraintTop_toBottomOf="@+id/item_upvote"
+        android:text="12k"
+        android:textSize="20sp"
+        android:textColor="#f5f5f5"/>
+
+
+    <ImageView
+        android:id="@+id/item_bookmark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/bookmark_icon"
+        app:layout_constraintLeft_toLeftOf="@id/guideline2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_image" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@id/item_bookmark"
+        app:layout_constraintRight_toRightOf="@id/item_bookmark"
+        app:layout_constraintTop_toBottomOf="@+id/item_bookmark"
+        android:text="2.3k"
+        android:textSize="20sp"
+        android:textColor="#f5f5f5"/>
+
+
+    <ImageView
+        android:id="@+id/item_downvote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/downvote_icon"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_image" />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@id/item_downvote"
+        app:layout_constraintRight_toRightOf="@id/item_downvote"
+        app:layout_constraintTop_toBottomOf="@+id/item_downvote"
+        android:text="44"
+        android:textSize="20sp"
+        android:textColor="#f5f5f5"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
